syntax = "proto3";

package protob;

message Pong {
	string value = 1;
}

message Void {}

message Params {
	bytes text = 1;
	bool with_bayes = 3;
	string language = 4;
	bool with_verification = 5;
	repeated int32 sources = 6;
}

message NameStrings {
	bytes text = 3;
	repeated NameString names = 6;
}

message NameString {
	string value = 1;
	string verbatim = 2;
	float odds = 3;
	string path = 4;
	bool curated = 5;
	int32 edit_distance = 6;
	int32 edit_distance_stem = 7;
	int32 source_id = 8;
	MatchType match = 9;
	int32 offset_start = 10;
	int32 offset_end = 11;
	repeated SourceResult sources_result = 12;
}

message SourceResult {
	int32 source_id = 1;
	string title = 2;
	string name_id = 3;
	string taxon_id = 4;
}

enum MatchType {
	NONE = 0;
	EXACT = 1;
	CANONICAL_EXACT = 2;
	CANONICAL_FUZZY = 3;
	PARTIAL_EXACT = 4;
	PARTIAL_FUZZY = 5;
}


service GNFinder {
	rpc Ping(Void) returns(Pong) {}
	rpc FindNames(Params) returns(NameStrings) {}
}
